Fix: alignment of filter component

--- a/src/css/filter.css
+++ b/src/css/filter.css
@@ -9,7 +9,6 @@
     position: fixed;
     top: 10rem;
     left: 1rem;
-    bottom: 0;
     flex-direction: column;
     width: 12rem;
     border: 1px solid var(--border-light);
@@ -17,6 +16,19 @@
 
 .filter-heading{
     padding: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+
+.filter-heading span{
+    font-size: 1rem;
+    text-decoration: underline;
+}
+
+.filter-heading span:hover{
+    cursor: pointer;
 }
 
 .slider{
